<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/level_home" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/level_favorite" />
        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/level_history" />
        <item
            android:id="@+id/listeningFragment"
            android:icon="@drawable/ic_listening"
            android:title="@string/level_listening" />
        <item
            android:id="@+id/readingFragment"
            android:icon="@drawable/ic_reading"
            android:title="@string/level_reading" />
        <item
            android:id="@+id/writingFragment"
            android:icon="@drawable/ic_writing"
            android:title="@string/level_writing" />
    </group>


    <item android:title="@string/level_other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/rateUs"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/level_rate"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/ShareApp"
                    android:icon="@drawable/ic_share"
                    android:title="@string/level_share"
                    app:showAsAction="ifRoom" />
            </group>


        </menu>
    </item>
</menu>