<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/level_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/level_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/level_history"
        app:showAsAction="always" />
    <item
        android:id="@+id/rateUs"
        android:icon="@drawable/ic_rate"
        android:title="@string/level_rate"
        app:showAsAction = "never" />
    <item
        android:id="@+id/ShareApp"
        android:icon="@drawable/ic_share"
        android:title="@string/level_share"
        app:showAsAction="never" />
</menu>